improve configs